@@ -3,6 +3,14 @@ CVS code -
 	- Miscellaneous comment fixes. (DLR)
 	- Remove unnecessary #ifdef around termios.h #include in nano.c.
 	  (DLR)
+- winio.c:
+  edit_scroll()
+	- Redraw the lines before and after the scrolled region even if
+	  the scrolled region was only one line.  This fixes a display
+	  problem that occurs after doing a search that scrolls the
+	  screen down one line and leaves the cursor on the last line of
+	  the screen, in which case we need to update the line after the
+	  scrolled region. (DLR)
 
 GNU nano 1.3.10 - 2005.12.23
 - General:
